[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "innovanote-observability"
version = "0.1.0"
description = "Shared observability primitives for InnovaNote microservices: structured logging, error codes, correlation propagation, X-Ray tracing, CloudWatch EMF metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "InnovaNote" }]
keywords = ["observability", "logging", "tracing", "cloudwatch", "xray", "innovanote"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "python-ulid>=2.2",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110",
    "starlette>=0.36",
]
aws = [
    "boto3>=1.34",
]
xray = [
    "aws-xray-sdk>=2.12",
]
all = [
    "fastapi>=0.110",
    "starlette>=0.36",
    "boto3>=1.34",
    "aws-xray-sdk>=2.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "fastapi>=0.110",
    "starlette>=0.36",
    "boto3>=1.34",
    "aws-xray-sdk>=2.12",
    "httpx>=0.27",
    "moto[sqs]>=5.0",
]

[project.urls]
Repository = "https://github.com/sempejunior/innovanote-observability-"

[tool.hatch.build.targets.wheel]
packages = ["src/innovanote_observability"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "N818"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/innovanote_observability --cov-report=term-missing --cov-fail-under=80"
